--- a/docs/UML/classes/range_def.adoc
+++ b/docs/UML/classes/range_def.adoc
@@ -3,10 +3,10 @@
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*RANGE_DEF*
+2+^h|*RANGE_DEF<T>*
 
 h|*Description*
-2+a|Definition of a range of a tracked variable in terms of an Interval of an appropriate type.
+2+a|Definition of a range of a tracked variable in terms of an Interval of the variable type.
 
 h|*Attributes*
 ^h|*Signature*
