--- a/docs/decision_language/master.adoc
+++ b/docs/decision_language/master.adoc
@@ -43,8 +43,8 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 :sectnums:
 include::master01-preface.adoc[leveloffset=+1]
 include::master02-overview.adoc[leveloffset=+1]
-include::master04-language.adoc[leveloffset=+1]
-include::master05-model.adoc[leveloffset=+1]
+include::master04-dlm_syntax.adoc[leveloffset=+1]
+include::master05-dlm_model.adoc[leveloffset=+1]
 
 //include::master05-dl_statements.adoc[leveloffset=+1]
 //include::master06-dl_module.adoc[leveloffset=+1]
